# backend

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  seed.py
alembic/: env.py
alembic/versions/: 4c261470d6c7_create_laporan_table.py  6f7a8b9c0d1e_add_user_relation_to_laporan_table.py  73c041bdb298_create_users_table.py  7a8b9c0d1e2f_add_barang_table_and_move_photo_from_laporan.py  a1b2c3d4e5f6_add_role_to_users_table.py  b2c3d4e5f6a7_add_profile_fields_to_users_table.py  c3d4e5f6a7b8_add_email_verified_at.py  d4e5f6a7b8c9_create_lokasi_table.py  e5f6a7b8c9d0_add_lokasi_relation_to_staff_users.py  e6f7a8b9c0d2_add_kategori_barang_table.py  f6a7b8c9d0e1_add_timestamps_to_lokasi_table.py
src/: app.py
src/application/: __init__.py  i_email_service.py  i_password_service.py  i_storage_service.py  i_token_service.py
src/core/: auth.py  config.py  db.py  db_seeder.py  error_handler.py  exceptions.py  http.py  rate_limiter.py
src/domain/entity/: barang.py  i_kategori_barang_repository.py  i_laporan_repository.py  i_lokasi_repository.py  i_mahasiswa_repository.py  i_staff_repository.py  i_user_repository.py  kategori_barang.py  laporan.py  lokasi.py  user.py
tests/: conftest.py
tests/e2e/: helpers.py  test_auth_controller.py  test_found_report_controller.py  test_homepage_controller.py  test_kategori_barang_controller.py  test_lokasi_controller.py  test_lost_report_controller.py  test_report_controller.py  test_user_controller.py
tests/unit/: test_laporan_repository.py
(+49 files in other folders)
