[project]
name = "fastapi-vsa-ddd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "black>=26.1.0",
    "fastapi>=0.128.7",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.0",
    "uvicorn[standard]>=0.40.0",
]
